# flash-attention

./: .gitignore  CudaExperiments.ipynb  README.md  bert_train.sh  book_corpus_dataset.py  experiment.py  main.py  output_parse.ipynb  pyproject.toml
BERT-pytorch/: README.md
BERT-pytorch/bert_pytorch/: __main__.py
BERT-pytorch/bert_pytorch/model/: bert.py  transformer.py
BERT-pytorch/bert_pytorch/model/attention/: multi_head.py  single.py
BERT-pytorch/bert_pytorch/trainer/: pretrain.py
Experiments/: CudaExperiments.ipynb  output_parse.ipynb
